Login front back
Login front back

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
         ports:
             - "8000:8000"
         image: ecomerce:django
-        command: bash -c "dockerize -wait tcp://mysqldb:3306 -timeout 120s && python manage.py makemigrations && python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
+        command: bash -c "dockerize -wait tcp://mysqldb:3306 -timeout 120s && python manage.py makemigrations && python manage.py migrate && python init_script.py && python manage.py runserver 0.0.0.0:8000"
         volumes:
             - .:/app
         depends_on:
